[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/scripts/SpikeHead.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/spike_head/Idle (54x52).png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/spike_head/Sleep (54x52).png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/spike_head/Hit (54x52).png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 54, 52 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 54, 52 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 54, 0, 54, 52 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 108, 0, 54, 52 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 162, 0, 54, 52 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 54, 52 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 54, 52 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 11 ) ],
"loop": false,
"name": "hit",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "sleep",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 47.0589, 46.5405 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 384, 416 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 192, 416 )

[node name="SpikeHead" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 7 )
animation = "sleep"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="WakeUp" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="WakeUp"]
shape = SubResource( 9 )

[node name="Fall" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fall"]
shape = SubResource( 10 )
[connection signal="body_entered" from="WakeUp" to="." method="_on_WakeUp_body_entered"]
[connection signal="body_exited" from="WakeUp" to="." method="_on_WakeUp_body_exited"]
[connection signal="body_entered" from="Fall" to="." method="_on_Fall_body_entered"]
[connection signal="body_exited" from="Fall" to="." method="_on_Fall_body_exited"]
